# nxgbcc-android-faiss

./: README.md
app/: build.gradle
app/libs/include/coin/: IpoptConfig.h
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Extra.cpp  IndexHNSW.cpp  ProductQuantizer.cpp  f2c.h  f77_aloc.c  ilaslc.c  ilaslr.c  native-lib.cpp  s_copy.c  saxpy.c  sbdsqr.c  scopy.c  sgebd2.c  sgebrd.c  sgehd2.c  sgehrd.c  sgelq2.c  sgelqf.c  sgeqr2.cpp  sgesvd.cpp  sisnan.c  slabad.c  slabrd.c  slacpy.c  slaexc.c  slahqr.c  slahr2.c  slaisnan.c  slanv2.c  slapy2.c  slaqr1.c  slaqr2.c  slaqr3.c  slaqr4.c  slaqr5.c  slarf.c  slarfb.cpp  slarfg.c  slarfp.c  (+34 more)
app/src/main/java/io/datamachines/faiss/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
